--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-#configuración de puertos
-server.port=8090
-#acceso a database mysql "zapateriadb" creada para el proyecto
-spring.datasource.url=jdbc:mysql://localhost:3306/zapateriadb
+spring.datasource.url=jdbc:mysql://localhost:3306/calzadodb
 spring.datasource.username=root
-spring.datasource.password=MapacheTec0128*#
+spring.datasource.password=saul.0108
 spring.jpa.hibernate.ddl-auto=update
+
