--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#Al ser variable entre las dos fuentes de bases de datos locales, variará el 'spring.datasource.password'
+#Saúl: saul.0108 ; Ángel:  MapacheTec0128*#
+#puerto por defecto: 8080
+#Agregar si es necesario 'server.port=8080'
 spring.datasource.url=jdbc:mysql://localhost:3306/calzadodb
 spring.datasource.username=root
-spring.datasource.password=saul.0108
+spring.datasource.password=MapacheTec0128*#
+#spring.datasource.password=saul.0108
 spring.jpa.hibernate.ddl-auto=update
-
